--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 security.basic.enabled=false
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.tool.hbm2ddl=DEBUG
+spring.jpa.show-sql=true
