--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,9 @@
             </resource>
             <resource>
                 <directory>src/main/webapp</directory>
+                <excludes>
+                    <exclude>**/*.scss*</exclude>
+                </excludes>
             </resource>
         </resources>
         <plugins>
@@ -150,6 +153,12 @@
                 </dependencies>
             </plugin>-->
             <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <packagingExcludes>**/*.scss*</packagingExcludes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <executions>
@@ -165,8 +174,14 @@
                 <artifactId>vaadin-maven-plugin</artifactId>
                 <version>7.6.2</version>
                 <configuration>
-                    <webappDirectory>${project.build.outputDirectory}/VAADIN/widgetsets</webappDirectory>
+                    <!--<webappDirectory>${project.build.outputDirectory}/VAADIN/widgetsets</webappDirectory>-->
+                    <webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets</webappDirectory>
+                    <hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets</hostedWebapp>
+                    <noServer>true</noServer>
                     <strict>true</strict>
+                    <draftCompile>false</draftCompile>
+                    <persistentunitcachedir>${project.build.directory}</persistentunitcachedir>
+                    <deploy>${project.build.directory}/gwt-deploy</deploy>
                 </configuration>
                 <executions>
                     <execution>
@@ -180,6 +195,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- As we are doing "inplace" GWT compilatio, ensure the widgetset -->
+            <!-- directory is cleaned properly -->
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>src/main/webapp/VAADIN/widgetsets</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
             </plugin>
         </plugins>
     </build>
