--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <querydsl.version>3.7.1</querydsl.version>
+        <vaadin.version>7.6.3</vaadin.version>
     </properties>
     <repositories>
         <repository>
@@ -88,7 +89,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-client</artifactId>
-            <version>7.6.2</version>
+            <version>${vaadin.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>validation-api</artifactId>
@@ -99,7 +100,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-client-compiled</artifactId>
-            <version>7.6.2</version>
+            <version>${vaadin.version}</version>
         </dependency>
         <dependency>
             <groupId>com.mysema.querydsl</groupId>
@@ -126,7 +127,7 @@
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-bom</artifactId>
-                <version>7.6.2</version>
+                <version>${vaadin.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -211,7 +212,7 @@
             <plugin>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-maven-plugin</artifactId>
-                <version>7.6.2</version>
+                <version>${vaadin.version}</version>
                 <configuration>
                     <!--<webappDirectory>${project.build.outputDirectory}/VAADIN/widgetsets</webappDirectory>-->
                     <webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets</webappDirectory>
